# cpp-cross-platform

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
cmake/: platform.cmake
cmake/Modules/: Findlibuuid.cmake  Finduuid.cmake
cmake/modules/: Findlibuuid.cmake
include/: example.h  identifier.h
src/: identifier.cpp  main.cpp
